working on customizing the dashboard

--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <style> body {
+    background-color: #E5E6ED
+  } 
+  </style>
 </head>
 
 <body>
-
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center" background-image: "../images/bacteria1.jpg">
+      <div class="col-md-12">
+        <div class = "jumbotron text-center" style = "background-image: url('../images/bacteria1.jpg)">
+          <div class="jumbotron-background">
+          <img src="../images/bacteria1.jpg">
+        </div>
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
