--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <style> body {
+  <style> .panel {
+    background-image: none;
+    background-color: #E5E6ED;
+    color: black ;
+  }
+  body {
     background-color: #E5E6ED
   } 
+  .jumbotron {
+    background-image: url("../images/bacteria1.jpg");
+    background-size: 100% 100%;
+    text-align: center;
+    color: white
+}
+  .well {
+    background-color: #E5E6ED;
+    color: black;
+    border-style: solid;
+    border-color: #28262B;
+  }
+  .synopsis {
+    font-size: large;
+  }
   </style>
 </head>
 
@@ -18,17 +38,17 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class = "jumbotron text-center" style = "background-image: url('../images/bacteria1.jpg)">
-          <div class="jumbotron-background">
-          <img src="../images/bacteria1.jpg">
-        </div>
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <div class = "jumbotron jumbotron-fluid text-center">
+          <div class="jumbotron-background"> 
+            <h1>Belly Button Biodiversity Dashboard</h1>
+            <p>Use the interactive charts below to explore the dataset</p>
+          </div>
+        </div>  
       </div>
     </div>
     <div class="row">
       <div class="col-md-2">
-        <div class="well">
+        <div class="well text-center">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
@@ -48,9 +68,18 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xs-12">
         <div id="bubble"></div>
       </div>
+    </div>
+    <div class= "synopsis text-center">
+      <h2>Synopsis</h2>
+      <p> This project identifies the prevalent bacteria found in each subject's navel. To utilize this dashboard, please choose your ID (each subject was given a unique ID number at registration). 
+        Use this number to access your results.</br>
+        <br>The bar chart shows the top ten bacteria found in your navel and the bacteria ID number and type.
+        <br>The bubble chart visualizes the amount of each bacterium found in your belly button.
+        <br> Finally, the gauge chart marks the number of times per week the subject washes their navel.
+      </p>
     </div>
   </div>
 
