--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     background-color: #E5E6ED
   } 
   .jumbotron {
-    background-image: url("../images/bacteria1.jpg");
+    background-image: url("./images/bacteria1.jpg");
     background-size: 100% 100%;
     text-align: center;
     color: white
@@ -76,8 +76,8 @@
       <h2>Synopsis</h2>
       <p> This project identifies the prevalent bacteria found in each subject's navel. To utilize this dashboard, please choose your ID (each subject was given a unique ID number at registration). 
         Use this number to access your results.</br>
-        <br>The bar chart shows the top ten bacteria found in your navel and the bacteria ID number and type.
-        <br>The bubble chart visualizes the amount of each bacterium found in your belly button.
+        <br>The bar chart shows the top ten bacteria found in each subject's navel as well as the bacteria ID number and type.
+        <br>The bubble chart visualizes the amount of each bacterium found in each subject's belly button.
         <br> Finally, the gauge chart marks the number of times per week the subject washes their navel.
       </p>
     </div>
