--- a/index.html
+++ b/index.html
@@ -72,14 +72,18 @@
         <div id="bubble"></div>
       </div>
     </div>
-    <div class= "synopsis text-center">
-      <h2>Synopsis</h2>
-      <p> This project identifies the prevalent bacteria found in each subject's navel. To utilize this dashboard, please choose your ID (each subject was given a unique ID number at registration). 
-        Use this number to access your results.</br>
+    <div class="row">
+      <div class=col-xs-12">
+        <div class= "synopsis text-center">
+        <h2>Synopsis</h2>
+        <p> This project identifies the prevalent bacteria found in each subject's navel. To utilize this dashboard, please choose your ID (each subject was given a unique ID number at registration). 
+          Use this number to access your results.</br>
         <br>The bar chart shows the top ten bacteria found in each subject's navel as well as the bacteria ID number and type.
-        <br>The bubble chart visualizes the amount of each bacterium found in each subject's belly button.
-        <br> Finally, the gauge chart marks the number of times per week the subject washes their navel.
-      </p>
+        <br>the gauge chart marks the number of times per week the subject washes their navel.
+        <br> Finally, the bubble chart visualizes the amount of each bacterium found in each subject's belly button.
+        </p>
+        </div>
+      </div>
     </div>
   </div>
 
